/*
 *
 */

2009-05-26 12:37 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * build_bkls.sh
    ! Fixed for work correctly on Darwin (sed difference vs Linux)

  * GNUmakefile
  * config/tmpl_hrb.bkl
  * demos/dbExplorer/GNUmakefile
  * demos/dbExplorer/makefile.gcc
  * demos/dbExplorer/makefile.vc
  * demos/helloworld/GNUmakefile
  * demos/helloworld/makefile.gcc
  * demos/helloworld/makefile.vc
  * makefile.gcc
  * makefile.vc
  * samples/arrbrowser/GNUmakefile
  * samples/arrbrowser/makefile.gcc
  * samples/arrbrowser/makefile.vc
  * samples/auinotebook/GNUmakefile
  * samples/auinotebook/makefile.gcc
  * samples/auinotebook/makefile.vc
  * samples/button/GNUmakefile
  * samples/button/makefile.gcc
  * samples/button/makefile.vc
  * samples/checkbox/GNUmakefile
  * samples/checkbox/makefile.gcc
  * samples/checkbox/makefile.vc
  * samples/choice/GNUmakefile
  * samples/choice/makefile.gcc
  * samples/choice/makefile.vc
  * samples/combobox/GNUmakefile
  * samples/combobox/makefile.gcc
  * samples/combobox/makefile.vc
  * samples/dbbrowser/GNUmakefile
  * samples/dbbrowser/makefile.gcc
  * samples/dbbrowser/makefile.vc
  * samples/gauge/GNUmakefile
  * samples/gauge/makefile.gcc
  * samples/gauge/makefile.vc
  * samples/grid/GNUmakefile
  * samples/grid/makefile.gcc
  * samples/grid/makefile.vc
  * samples/listbook/GNUmakefile
  * samples/listbook/makefile.gcc
  * samples/listbook/makefile.vc
  * samples/menu/GNUmakefile
  * samples/networking/GNUmakefile
  * samples/networking/makefile.bcc
  * samples/networking/makefile.gcc
  * samples/networking/makefile.vc
  * samples/notebook/GNUmakefile
  * samples/notebook/makefile.gcc
  * samples/notebook/makefile.vc
  * samples/panel/GNUmakefile
  * samples/panel/makefile.gcc
  * samples/panel/makefile.vc
  * samples/radiobox/GNUmakefile
  * samples/radiobox/makefile.gcc
  * samples/radiobox/makefile.vc
  * samples/sayget/GNUmakefile
  * samples/sayget/makefile.gcc
  * samples/sayget/makefile.vc